--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -775,14 +775,14 @@
             },
             "not_found": "The asset %(name)s does not exist",
             "permissions": {
+                "accounts_in_whitelist_market_fee_sharing": "Accounts included in Market fee sharing whitelist",
                 "blacklist_authorities": "Blacklist authorities",
                 "blacklist_markets": "Blacklist markets",
                 "max_market_fee": "Max market fee",
                 "max_supply": "Max supply",
                 "title": "Permissions",
                 "whitelist_authorities": "Whitelist authorities",
-                "whitelist_markets": "Whitelist markets",
-                "accounts_in_whitelist_market_fee_sharing": "Accounts included in Market fee sharing whitelist"
+                "whitelist_markets": "Whitelist markets"
             },
             "price_feed": {
                 "external_feed_price": "Feed price (median of witness feeds)",
@@ -841,10 +841,10 @@
                 "blacklist_authorities": "Blacklist authorities",
                 "blacklist_markets": "Market blacklist",
                 "enable_flag": "The whitelist flag must be enabled in order to set whitelist authorities",
+                "market_fee_enable_flag": "The market fee flag must be enabled in order to set whitelist",
                 "whitelist_authorities": "Whitelist authorities",
-                "whitelist_markets": "Market whitelist",
                 "whitelist_market_fee_sharing": "Market fee sharing whitelist",
-                "market_fee_enable_flag": "The market fee flag must be enabled in order to set whitelist"
+                "whitelist_markets": "Market whitelist"
             }
         },
         "assets": {
@@ -1953,13 +1953,10 @@
             "update_mandate": "Update existing authorization"
         },
         "htlc": {
-            "first_stage": "1st stage",
-            "second_stage": "2nd stage",
-            "custom": "Custom",
             "actions": "Actions",
             "amount": "Amount",
-            "redeem": "Redeem",
             "create_htlc": "Create HTLC",
+            "custom": "Custom",
             "description": "A HTLC locks away funds for given recipient, who can redeem those funds by providing a secret preimage (password) that was used by the sender to create the contract. Disclosing the password happens off-chain.",
             "enter_secret_preimage": "Enter secret preimage",
             "expiration": "Expiration",
@@ -1972,12 +1969,15 @@
             "expires": "Expires",
             "extend": "Extend",
             "extend_htlc": "Extend HTLC",
+            "first_stage": "1st stage",
             "from": "From",
             "hash": "Hash",
             "preimage": "Preimage",
             "preimage_has_been_created": "A random preimage has been created and filled in automatically below.",
             "recipient": "Recipient",
+            "redeem": "Redeem",
             "redeem_htlc": "Redeem HTLC",
+            "second_stage": "2nd stage",
             "sender": "Sender",
             "size": "Size",
             "title": "Hashed Time-Lock Contracts",
