--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -293,6 +293,8 @@
             "primary": "主要設定",
             "quote": "クオートアセット量",
             "quote_name": "クオートアセット",
+            "reward_percent": "Reward percent",
+            "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "ショートネーム (最大32文字)",
             "symbol": "シンボル",
             "to": "アカウントへ発行",
@@ -396,7 +398,8 @@
             "empty_white_by": "%(account)sをホワイトリストに登録したアカウントはありません。",
             "title": "ホワイトリスト",
             "white_by": "ホワイトリスト登録者",
-            "whitelist_authorities": "ホワイトリスト権限"
+            "whitelist_authorities": "ホワイトリスト権限",
+            "whitelist_market_fee_sharing": "Market fee sharing whitelist"
         }
     },
     "account_browsing_mode": {
@@ -766,6 +769,7 @@
             },
             "not_found": "アセット%(name)sは存在しません",
             "permissions": {
+                "accounts_in_whitelist_market_fee_sharing": "Accounts included in Market fee sharing whitelist",
                 "blacklist_authorities": "ブラックリスト権限",
                 "blacklist_markets": "ブラックリストマーケット",
                 "max_market_fee": "最大取引手数料",
@@ -823,7 +827,7 @@
                 "current_supply": "現在の供給量",
                 "issuer": "発行者",
                 "market_fee": "取引手数料",
-                "max_market_fee": "最大取引手数料",
+                "market_fee_referral_reward_percent": "Market fee referral reward",
                 "stealth_supply": "隠れた供給量"
             },
             "title": "アセット",
@@ -831,7 +835,9 @@
                 "blacklist_authorities": "ブラックリスト権限",
                 "blacklist_markets": "マーケットブラックリスト",
                 "enable_flag": "ホワイトリスト権限を設定するには、ホワイトリストのフラグを有効にする必要があります。",
+                "market_fee_enable_flag": "The market fee flag must be enabled in order to set whitelist",
                 "whitelist_authorities": "ホワイトリスト権限",
+                "whitelist_market_fee_sharing": "Market fee sharing whitelist",
                 "whitelist_markets": "マーケットホワイトリスト"
             }
         },
@@ -1943,8 +1949,8 @@
         "htlc": {
             "actions": "Actions",
             "amount": "Amount",
-            "claim": "Claim",
             "create_htlc": "Create HTLC",
+            "custom": "Custom",
             "description": "A HTLC locks away funds for given recipient, who can redeem those funds by providing a secret preimage (password) that was used by the sender to create the contract. Disclosing the password happens off-chain.",
             "enter_secret_preimage": "Enter secret preimage",
             "expiration": "Expiration",
@@ -1957,12 +1963,15 @@
             "expires": "Expires",
             "extend": "Extend",
             "extend_htlc": "Extend HTLC",
+            "first_stage": "1st stage",
             "from": "From",
             "hash": "Hash",
             "preimage": "Preimage",
             "preimage_has_been_created": "A random preimage has been created and filled in automatically below",
             "recipient": "Recipient",
+            "redeem": "Redeem",
             "redeem_htlc": "Redeem HTLC",
+            "second_stage": "2nd stage",
             "sender": "Sender",
             "size": "Size",
             "title": "Hashed Time-Lock Contracts",
