--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -293,6 +293,8 @@
             "primary": "主要设定",
             "quote": "标价资产数量",
             "quote_name": "标价资产",
+            "reward_percent": "Reward percent",
+            "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "简称 (最多32个字符)",
             "symbol": "资产代码",
             "to": "发行到账户",
@@ -396,7 +398,8 @@
             "empty_white_by": "%(account)s 未被列入任何白名单",
             "title": "白名单",
             "white_by": "被列入白名单",
-            "whitelist_authorities": "白名单权限"
+            "whitelist_authorities": "白名单权限",
+            "whitelist_market_fee_sharing": "Market fee sharing whitelist"
         }
     },
     "account_browsing_mode": {
@@ -772,6 +775,7 @@
             },
             "not_found": "资产 %(name)s 不存在",
             "permissions": {
+                "accounts_in_whitelist_market_fee_sharing": "Accounts included in Market fee sharing whitelist",
                 "blacklist_authorities": "黑名单权限",
                 "blacklist_markets": "黑名单市场",
                 "max_market_fee": "市场手续费上限",
@@ -829,7 +833,7 @@
                 "current_supply": "当前供应量",
                 "issuer": "发行人",
                 "market_fee": "市场手续费率",
-                "max_market_fee": "市场手续费上限",
+                "market_fee_referral_reward_percent": "Market fee referral reward",
                 "stealth_supply": "隐私供应量"
             },
             "title": "资产",
@@ -837,7 +841,9 @@
                 "blacklist_authorities": "黑名单权限",
                 "blacklist_markets": "市场黑名单",
                 "enable_flag": "活动标记中启用白名单功能后才能设置白名单账户",
+                "market_fee_enable_flag": "The market fee flag must be enabled in order to set whitelist",
                 "whitelist_authorities": "白名单账户",
+                "whitelist_market_fee_sharing": "Market fee sharing whitelist",
                 "whitelist_markets": "市场白名单"
             }
         },
@@ -1949,8 +1955,8 @@
         "htlc": {
             "actions": "Actions",
             "amount": "Amount",
-            "claim": "Claim",
             "create_htlc": "Create HTLC",
+            "custom": "Custom",
             "description": "A HTLC locks away funds for given recipient, who can redeem those funds by providing a secret preimage (password) that was used by the sender to create the contract. Disclosing the password happens off-chain.",
             "enter_secret_preimage": "Enter secret preimage",
             "expiration": "Expiration",
@@ -1963,12 +1969,15 @@
             "expires": "Expires",
             "extend": "Extend",
             "extend_htlc": "Extend HTLC",
+            "first_stage": "1st stage",
             "from": "From",
             "hash": "Hash",
             "preimage": "Preimage",
             "preimage_has_been_created": "A random preimage has been created and filled in automatically below",
             "recipient": "Recipient",
+            "redeem": "Redeem",
             "redeem_htlc": "Redeem HTLC",
+            "second_stage": "2nd stage",
             "sender": "Sender",
             "size": "Size",
             "title": "Hashed Time-Lock Contracts",
