--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -2083,7 +2083,7 @@
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
         "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
         "proxy_remove": "Sie haben einen Vertreter ausgewählt, um diesen zu entfernen einfach den Eintrag löschen und speichern.",
-        "proxy_search": "",
+        "proxy_search": "Suchen Sie nach einem Konto, der als Ihr Vertreter gewählt werden kann!",
         "registration": {
             "accountModel": "The cloud wallet lets you login to your wallet from anywhere using only your account name and password, but your password is vulnerable to brute-force attacks which means it is important to use a very long password, ideally 20+ characters!",
             "accountName": "Account name must contain from 4 to 63 characters and must consist of latin letters, dashes, digits.",
