Styles and code refactoring Translations added Added displaying of the default fee asset

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1767,6 +1767,7 @@
         "confirm_remove": "Are you sure you want to remove %(name)s from your available nodes?",
         "confirm_yes": "Always",
         "connection_error": "Unable to connect to API node %(url)s, falling back to known working nodes. Error was: %(error)s",
+        "current_fee_asset": "Current fee asset is: ",
         "darkTheme": "Dark",
         "delete_select": "Select local wallet to delete",
         "disabled": "Disabled",
@@ -1774,6 +1775,7 @@
         "faucet_address": "Faucet",
         "faucet_address_text": "The faucet address is used to pay the registration fee for new users.",
         "fee_asset": "Default fee paying asset",
+        "change_default_fee_asset": "Change default asset",
         "general": "General",
         "general_text": "Adjust the basic settings.",
         "global_settings": "Default Global Settings",
